# react-native-arculus-csdk

./: .mise.toml  CONTRIBUTING.md  LICENSE  README.md  aptos-labs-react-native-arculus-csdk.podspec  package.json  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/aptoslabs/arculus/: Arculus.kt  NFCConnectionProvider.kt  NFCSessionManager.kt
android/src/main/java/com/aptoslabs/arculus/csdk/: CSDK.kt  CSDKAPI.kt  CSDKAPICall.kt  CSDKAPIChainCall.kt  CSDKAPICommand.kt  SizeTByReference.kt  Util.kt  WalletGetFirmwareVersion.kt  WalletGetGGUID.kt  WalletGetPublicKeyFromPath.kt  WalletInitRecoverWallet.kt  WalletInitSession.kt  WalletResetWallet.kt  WalletSeedCreateWallet.kt  WalletSeedFinishRecoverWallet.kt  WalletSeedFromMnemonicSentence.kt  WalletSelectWallet.kt  WalletSignHash.kt  WalletStoreDataPIN.kt  WalletVerifyPIN.kt
android/src/main/java/com/aptoslabs/reactnativearculuscsdk/: RNArculus.kt  RNEventEmitter.kt  RNNFCScannerService.kt  RNNFCSessionManager.kt  ReactNativeArculusCsdkModule.kt  ReactNativeArculusCsdkPackage.kt
cpp/: aptos-labs-react-native-arculus-csdk.cpp  aptos-labs-react-native-arculus-csdk.h
example/: app.json  index.js  package.json
ios/: ArculusWallet.swift  CardService.swift  CommandHandler.swift  NFCSessionManager.swift  RNArculus.swift  RNArculusCSDK.swift  RNNFCSessionManager.swift  ReactNativeArculusCsdk.h  ReactNativeArculusCsdk.mm  ReactNativeArculusCsdk.swift  Util.swift
src/: AptosCard.tsx  Arculus.tsx  ArculusCard.tsx  (+7 more)
(+49 files in other folders)
